# pipeline_dashboard_backend_mvp

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml
docs/: OPERATIONS.md
examples/: metrics_report.json
src/pipeline_dashboard_backend/: __init__.py  _version.py  aggregation.py  api.py  artifact_loader.py  builder.py  cli.py  contracts.py  exceptions.py  query.py  report_io.py
tests/: test_aggregation.py  test_api.py  test_artifact_loader.py  test_bootstrap.py  test_builder.py  test_cli.py  test_contracts.py  test_package_metadata.py  test_query.py  test_report_io.py
