[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-dashboard-backend"
version = "0.1.0"
description = "Artifact-first dashboard backend for RADAR_SERVICE runtime observability."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "RADAR_SERVICE" }
]
keywords = [
    "dashboard",
    "observability",
    "pipeline",
    "runtime",
    "api",
    "automation",
    "radar-service"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30"
]

[project.scripts]
pipeline-dashboard-backend = "pipeline_dashboard_backend.cli:entrypoint"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pipeline_dashboard_backend = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pipeline_dashboard_backend"]
